--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     </dependencies>
 
     <build>
+        <finalName>speech-manager</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
