--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.servlet.context-path=/api/v1
 
 # data source
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://localhost:5432/speeches
+spring.datasource.url=jdbc:postgresql://db:5432/speeches
 spring.datasource.username=dev
 spring.datasource.password=dev
 spring.datasource.driver-class-name=org.postgresql.Driver
